--- a/style.css
+++ b/style.css
@@ -7,5 +7,10 @@ body{
 header {border-bottom: solid 4px red;
 padding: 10px;
 font-size: 32px;
-color:goldenrod
+color:goldenrod;
 }
+section{background: yellow;
+padding-bottom: 80px;
+padding-top: 50px;
+display: flex;
+justify-content: center;}
